# albert-plugin-files

./: CMakeLists.txt  README.md  metadata.json
src/: configwidget.cpp  configwidget.ui  file.h  filebrowsers.cpp  filebrowsers.h  fileitems.cpp  fileitems.h  fsindexnodes.cpp  fsindexnodes.h  fsindexpath.cpp  mimefilterdialog.cpp  namefilterdialog.cpp  plugin.cpp  plugin.h
test/: test.cpp
